correct spacing problems

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,25 @@
+/* FONT STYLES */
+
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif+SC|Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
+
+
+
+h1, h2, h3, h4, h5, h6, h7, h8{
+    font-family: 'Roboto', sans-serif;
+}
+
+p, ol{
+    font-family: 'Roboto', sans-serif;
+}
+
+.p-emphasis p{
+    font-family: 'Noto Serif SC', serif; 
+    font-weight: 500;
+    font-size: 18px;
+    font-style: normal;
+}
+
+
 /* NAVIGATION */
 
 
